fix input on mobile

--- a/src/components/SearchBar/SearchBar.module.scss
+++ b/src/components/SearchBar/SearchBar.module.scss
@@ -1,6 +1,6 @@
 .search_container {
   flex: 1;
-  min-width: 32rem;
+  // min-width: 32rem;
   height: 3.4rem;
   margin-bottom: var(--spacing-sm);
   display: flex;
